fix incorrect address for cuckoo net

--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,7 @@
 		</p>
 		<p>There are currently very few IRC networks that support SSL connections. However, 
 			one IRC network that this program has been tested with is <a href="http://www.cuckoo.com/irc/">
-				CuckooNet IRC</a> (irc.cuckoo.net or irc.distributed.net), which is the IRC 
+				CuckooNet IRC</a> (irc.cuckoo.com or irc.distributed.net), which is the IRC 
 			network run primarily for the users of <a href="http://www.distributed.net">distributed.net</a>.</p>
 		<P>Due to the hooking technique that is being used, this program is only compatible 
 			with Windows 2000 and Windows XP machines.&nbsp; It will not work on Windows 
