update port listing

--- a/readme.html
+++ b/readme.html
@@ -89,18 +89,29 @@
 			<LI>
 			6697 (axenet)
 			<LI>
+			6699 (P2PChat)
+			<LI>
+			7032 (irdsi)
+			<LI>
+			6670 (NexusIRC)
+			<LI>
+			9998, 9999 (suidnet, chatsages)
+			<LI>
 			6999 (Biteme-irc)
 			<LI>
-			9999 (suidnet)
-			<LI>
 			6000 (wondernet)
+			<LI>
+			9000 (chatchannel)
 			<LI>
 				25401</LI></UL>
 		<P>You can also customize the list of ports the StunTour will intercept, in case 
 			you need to connect to a server using a different port (see below). 
 			&nbsp;Contact me if your IRC network uses a port that is not listed and I'll 
 			add it to a future version so that it will be intercepted for new StunTour 
-			users by default.</P>
+			users by default, as long as I don't think that the port number overlaps with a 
+			commonly used plaintext port number.&nbsp; However I greatly recommend that you 
+			to try to contact the operators of your IRC network and encourage them to use 
+			the RFC allocated standard port of 994 first.</P>
 		<P>If you attempt to make IRC connections to a server on any other port, then a 
 			normal unencrypted connection will be made.&nbsp; Since mIRC 6.x allows 
 			multiple simultaneous connections to different servers to be made, this allows 
